--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@
     - "2.7"  
     
   # command to install dependencies
-  install:
+  before_script:
+    - easy_install distribute
     - pip install -r requirements.txt
   
   script:
