--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,22 @@
-Cap1xxx==0.1.3
-ExplorerHAT==0.4.2
-Flask>=0.12.3
-Jinja2==2.7.3
-MarkupSafe==0.23
-Pillow==2.6.1
-Werkzeug==0.9.6
-argparse==1.2.1
-automationhat==0.0.4
-blinker==1.3
-blinkt==0.1.0
-chardet==2.3.0
-colorama==0.3.2
-drumhat==0.0.5
-envirophat==0.0.6
-fourletterphat==0.0.2
-html5lib==0.999
-itsdangerous==0.24
-microdotphat==0.1.3
-mote==0.0.3
-motephat==0.0.2
-ndg-httpsclient==0.3.2
-numpy==1.8.2
-phatbeat==0.0.2
-pianohat==0.0.5
-picraft==1.0
-piglow==1.2.4
-pyasn1==0.1.7
-pyserial==2.6
-rainbowhat==0.0.2
-requests>=2.20.0
-scrollphat==0.0.7
-scrollphathd==1.0.1
-sense-emu==1.0
+asn1crypto==0.22.0
+cryptography==1.9
+enum34==1.1.6
+gyp==0.1
+idna==2.5
+ipaddress==1.0.17
+mysql-connector-python==2.1.6
+mysql-utilities==1.6.4
+numpy==1.16.1
+paramiko==2.0.0
+pbr==5.1.2
+pexpect==4.2.1
+pyasn1==0.1.9
+pyodbc==3.0.10
+pyscript==0.6.1
+pysqlite==2.7.0
+six==1.10.0
+stevedore==1.30.0
+trash-cli==0.12.9.14
+virtualenv==16.3.0
+virtualenv-clone==0.5.1
+virtualenvwrapper==4.8.2
