--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 asn1crypto==0.22.0
 cryptography>=1.9
-cv2==3.0.0
 enum34==1.1.6
 idna==2.5
 imutils==0.5.2
 ipaddress==1.0.17
 numpy==1.16.1
+opencv==3.1
 paramiko>=2.0.0
 pbr==5.1.2
 pexpect==4.2.1
