pip freeze again

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 asn1crypto==0.22.0
 cryptography>=1.9
 enum34==1.1.6
+gyp==0.1
 idna==2.5
 imutils==0.5.2
 ipaddress==1.0.17
+mysql-connector-python==2.1.6
+mysql-utilities==1.6.4
 numpy==1.16.1
-opencv==3.1
 paramiko>=2.0.0
 pbr==5.1.2
 pexpect==4.2.1
 pyasn1==0.1.9
 pyodbc==3.0.10
+pyscript==0.6.1
+pysqlite==2.7.0
 six==1.10.0
 stevedore==1.30.0
 trash-cli==0.12.9.14
